RESOLVED FIXED280391
[UnifiedPDF][iOS] Zooming is broken if you scroll
https://bugs.webkit.org/show_bug.cgi?id=280391
Summary [UnifiedPDF][iOS] Zooming is broken if you scroll
Sammy Gill
Reported 2024-09-25 22:34:37 PDT
Attachments
Sammy Gill
Comment 1 2024-09-25 22:49:02 PDT
EWS
Comment 2 2024-10-09 14:30:42 PDT
Committed 284927@main (171c9d8a80c8): <https://commits.webkit.org/284927@main> Reviewed commits have been landed. Closing PR #34286 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.